--- a/about.html
+++ b/about.html
@@ -4,12 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&family=Roboto:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pushster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/main.css">
@@ -31,16 +27,16 @@
                 <!-- Menu-->
                 <ul class="menu">
                     <li class="item">
-                        <a href="index.html" class="active">Home</a>
+                        <a href="index.html" >Home</a>
                     </li>
                     <li class="item">
-                        <a  data-link="product" href="#products">products</a>
+                        <a  data-link="product" href="index.html">products</a>
                     </li>
                       <li class="item">
-                        <a  data-link="services" href="#services">services</a>
+                        <a  data-link="services" href="index.html">services</a>
                     </li>
                     <li class="item">
-                        <a href="about.html">About</a>
+                        <a href="about.html" class="active">About</a>
                     </li>
                     <li class="item">
                         <a href="contactus.html">Contact us</a>
@@ -96,13 +92,14 @@
     <!-- End about content-->
 
       <!-- Start footer -->
-      <footer class="footer">
+      <!-- Start footer -->
+    <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="col">
                     <div class="goal">
                         <h2 class="title">
-                            Ecommerce <span class="brand">website</span>
+                            About <span class="brand">wokiee</span>
                         </h2>
                         <div class="description">
                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa, perspiciatis. Optio, pariatur doloribus. Praesentium magnam temporibus voluptas perspiciatis dolore consequatur!
@@ -174,7 +171,7 @@
         <div class="copyright">
             <div class="container">
                 <div class="content float-left">
-                    Safirat &copy; <span>ITI </span>All Right Reserved
+                    Safirat &copy; <span> ITI </span> All Right Reserved
                 </div>
                 <div class="social float-right">
                     <span class="facebook icon">
@@ -193,7 +190,6 @@
                 </div>
         </div>     
     </footer>
-  
     <script src="js/about.js"></script>
 </body>
 </html>
