--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&family=Roboto:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pushster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/main.css">
@@ -68,7 +63,7 @@
                 <div class="intro text-center">
                     <h1 class="title">70% of new collection</h1>
                     <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta ex modi</p>
-                    <a class="btn btn-buy" href="#">buy now</a>
+                    <a class="btn btn-buy" href="#products" >buy now</a>
                 </div>
             </div>
       
@@ -77,7 +72,7 @@
                 <div class="intro text-center">
                     <h1 class="title">70% of new collection</h1>
                     <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta ex modi</p>
-                    <a class="btn btn-buy" href="#">buy now</a>
+                    <a class="btn btn-buy" href="#products">buy now</a>
                 </div>
             </div>
             <!-- end item-->
@@ -87,7 +82,7 @@
                 <div class="intro text-center">
                     <h1 class="title">70% of new collection</h1>
                     <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta ex modi</p>
-                    <a class="btn btn-buy" href="#">buy now</a>
+                    <a class="btn btn-buy" href="#products">buy now</a>
                 </div>
             </div>
             <!-- end item -->
